--- a/main.html
+++ b/main.html
@@ -11,11 +11,13 @@
     <script type="text/javascript" src="./script.js">
 	</script>
 	<table>
-		<tr>
-			<th>Item</th>
-			<th>Price</th>
-			<th>Quantity</th>
-		</tr>
+		<thead>
+			<tr>
+				<th>Item</th>
+				<th>Price</th>
+				<th>Quantity</th>
+			</tr>
+		</thead>
 		<tr>
 			<th>Banana</th>
 			<td>&#x20B9;1.00</td>
